--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,6 +173,9 @@ text-align: center;
 
 .title-all {
   border-bottom: 1px solid rgba(1, 0, 1, .2);
+  color: rgba(1,1,1,.5);
+  font-weight: 200;
+  letter-spacing: -1px;
 }
 
 .scroller {
