--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -216,3 +216,13 @@
   width: 200px;
   padding-left: 60px;
 }
+
+.comment-title {
+  border-bottom: 1px solid rgba(1,1,1,.2);
+  color: rgba(1,1,1,.5);
+}
+
+.wiki-show-index {
+  width: 100%;
+  border-bottom: 1px solid rgba(1,1,1,.2);
+}
