--- a/app/views/wikis/_showfollowed.html.erb
+++ b/app/views/wikis/_showfollowed.html.erb
@@ -1,5 +1,4 @@
-<% if show_followed? %>
-<% @wikis.take(3).each do |wiki| %>
+<% followed.take(3).each do |wiki| %>
   <div class="wiki-style col-sm-3">
       <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
       <div>
@@ -13,5 +12,4 @@
         <small><%= wiki.impressionist_count %> views</small>
       </div>
     </div>
-    <% end %>
   <% end %>
