--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -17,22 +17,8 @@
         <%= render 'wikis/showrecent'%>
       </div>
       <h4><%= link_to "Your Followers", followed_users_path(@wikis)%> </h4>
-      <div class="row wiki-show-index">
-        <% current_user.following.take(3).each do |following| %>
-          <div class="wiki-style col-sm-3">
-              <%= link_to image_tag(following.wiki.image.url(:medium)), following.wiki %>
-              <div>
-                <span class="link"><%= link_to following.wiki.title, following.wiki %></span>
-                <p class="desc-index"><%= wiki.description %> </p>
-              </div>
-              <div class="wiki-details">
-                <small><%=  link_to following.wiki.user.username, user_path(following.wiki.user)%></small>
-                <small><%= render partial: 'votes/like', locals: { wiki: following.wiki } %></small>
-                <small>Posted <%= time_ago_in_words(following.wiki.created_at) %> ago, </small>
-                <small><%= following.wiki.impressionist_count %> views</small>
-              </div>
-            </div>
-          <% end %>
+        <div class="row wiki-show-index">
+        <%= render 'wikis/showfollowed' %>
       </div>
     <% end %>
   </div>
