--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,2 @@
-<h1 class="container user-edit"> Edit Your Profile </h1>
+<h1 class="container title-all"> Edit Your Profile </h1>
     <%= render partial: 'users/form' %>
