--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,22 +1,22 @@
 <div class="new-wiki-form">
   <%= form_for @wiki, html: { multipart: true } do |f| %>
-     <div class="form-group">
+     <div class="form-all form-group">
        <%= f.label :title %>
        <%= f.text_field :title, class: 'form-control', placeholder: "Log Title"  %>
      </div>
-     <div class="form-group">
+     <div class="form-all form-group">
        <%= f.label "Share your experience" %>
        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Where did you go? What did you do?" %>
      </div>
-     <div class="form-group">
+     <div class="form-all form-group">
        <%= f.label :location %>
        <%= f.text_area :description, rows: 1, class: 'form-control', placeholder: "Ex. San Francsico, CA, USA." %>
      </div>
-     <div class="form-group">
+     <div class=" form-all form-group">
        <%= f.label "Add a thumbnail" %>
        <%= f.file_field :image %>
      </div>
-     <div class="form-group">
+     <div class="form-all form-group">
      <%= f.label "Select a category" %>
      <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select one!") %>
     </div>
