--- a/app/views/wikis/_showrecent.html.erb
+++ b/app/views/wikis/_showrecent.html.erb
@@ -1,5 +1,4 @@
-
-<% @wikis.take(3).each do |wiki| %>
+<% recent.take(3).each do |wiki| %>
     <div class="wiki-style col-sm-3">
         <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
         <div>
