add search function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,3 +307,14 @@ footer {
     color: rgba(1,1,1,.6);
   }
 }
+
+.search-bar {
+  position: absolute;
+  margin-left: 500px;
+  margin-top: 7px;
+
+    input[type="text"] {
+      width: 300px;
+      font-weight: 300;
+    }
+}
