--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   <div class="container-bar">
       <ul class="nav nav-pills navbar-inverse navigation">
       <li class="presentation nav-logo"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
-      <li class="presentation"> <%= link_to "Explore", wikis_path %></li>
+      <li class="presentation"> <%= link_to "Explore", all_wikis_path %></li>
+      <div class="search-bar">
+        <%= form_tag(wikis_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Logs" %>
+          <%= submit_tag "Search", :name => nil, class: 'btn btn-primary' %>
+        <% end %>
+      </div>
       <% if user_signed_in? %>
       <li class="presentation"> <%= link_to "Share", new_wiki_path %></li>
       <div class="avatar-button btn-group pull-right">
@@ -41,8 +47,8 @@
         <%= link_to "", conversations_path, class: 'glyphicon glyphicon-envelope' %>
       </div>
      <% else %>
-      <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
-      <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
+      <li class="presentation pull-right"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
+      <li class="presentation pull-right"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
      <% end %>
    </ul>
  </div>
