--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,24 +1,5 @@
-  <!-- <div class="container col-md-12 wiki-btn">
-   <%= link_to "New Post", new_wiki_path, class: 'btn btn-success' %>
- </div> -->
-<div class=" container main">
-  <h1 class="index-title">Explore <%= @wikis.count %> adventures</h1>
-  <h4><%= link_to "Most Recent", most_recent_path(@wikis)%></h4>
-    <div class="row wiki-show-index">
-      <%= render 'wikis/showrecent' %>
-    </div>
-    <h4><%= link_to "Most Popular", most_popular_path(@wikis)%></h4>
-      <div class="row wiki-show-index">
-        <%= render 'wikis/showtop' %>
-      </div>
-    <% if user_signed_in? %>
-    <h4><%= link_to "Your Likes", likes_path(@wikis)%> </h4>
-      <div class="row wiki-show-index">
-        <%= render 'wikis/showrecent'%>
-      </div>
-      <h4><%= link_to "Your Followers", followed_users_path(@wikis)%> </h4>
-        <div class="row wiki-show-index">
-        <%= render 'wikis/showfollowed' %>
-      </div>
-    <% end %>
-  </div>
+<% if @wikis.present? %>
+  <%= render 'wikis/showall'%>
+<% else %>
+  <p>There are no posts containing the term(s) <%= params[:search] %>.</p>
+<% end %>
