--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,14 +1,4 @@
-<h1> Edit Wiki </h1>
+<h1 class="title-all container"> Edit Wiki </h1>
   <div class="row col-md-8">
     <%= render partial: 'wikis/form' %>
-  </div>
-  <div class="row col-md-8"
-    <h2>Add Collaborators</h2>
-      <%= render partial: 'collaborators/create', locals: {wiki: @wiki}%>
-    <h2>Collaborators</h2>
-      <% @wiki.collaborators.each do |collaborator| %>
-        <p>
-          <%= collaborator.user.email %>
-          <%= link_to "Remove", [@wiki, collaborator], method: :delete, class: 'btn btn-danger btn-xs' %>
-      <% end %>
   </div>
