--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,7 +172,8 @@ text-align: center;
 }
 
 .title-all {
-  border-bottom: 1px solid rgba(1, 0, 1, .2);
+  border-bottom: 3px solid rgba(1, 0, 1, .2);
+  padding-bottom: 5px;
   color: rgba(1,1,1,.5);
   font-weight: 200;
   letter-spacing: -1px;
@@ -316,5 +317,31 @@ footer {
     input[type="text"] {
       width: 300px;
       font-weight: 300;
+    }
+}
+
+.user-session {
+
+     a:nth-child(1){
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin-right: 10px;
+      margin-top: 5px;
+     }
+
+      a:nth-child(2) {
+       padding-top: 5px;
+       padding-bottom: 5px;
+       margin-right: 10px;
+       margin-top: 5px;
+     }
+}
+
+.wiki-sub-title {
+  font-size: 24px;
+  font-weight: 200;
+
+    a {
+      font-size: 14px;
     }
 }
