--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title-all">Messages</h1>
+  <h1 class="title-all">Chat</h1>
 <% if @over_ten %>
  <%= link_to 'Show Previous', '?m=all' %>
 <% end %>
