--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -7,7 +7,7 @@
         <%= image_tag(@wiki.user.image.url(:thumb)) %>
         <% if user_is_authorized_for_wiki?(@wiki)%>
         <div class="user-action">
-          <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-primary' %>
+          <%= link_to "Edit", edit_wiki_path(@wiki), :class => 'btn btn-primary'%>
           <%= link_to "Delete Log", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this log?'} %>
         </div>
         <% end %>
