--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -248,12 +248,11 @@ text-align: center;
 }
 
 footer {
-  margin-top: 45px;
+  margin-top: 10px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
-  background-color: grey;
-  height: 200px;
+  height: 100px;
   a {
     color: #555;
     &:hover {
@@ -321,20 +320,16 @@ footer {
 }
 
 .user-session {
+    margin-right: 10px;
+    margin-top: 2px;
 
-     a:nth-child(1){
-      padding-top: 5px;
-      padding-bottom: 5px;
-      margin-right: 10px;
-      margin-top: 5px;
-     }
+    li:nth-child(1) {
+      margin-left: 15px;
 
-      a:nth-child(2) {
-       padding-top: 5px;
-       padding-bottom: 5px;
-       margin-right: 10px;
-       margin-top: 5px;
-     }
+      .btn {
+        color: white;
+      }
+    }
 }
 
 .wiki-sub-title {
