--- a/app/assets/stylesheets/pics.scss
+++ b/app/assets/stylesheets/pics.scss
@@ -2,16 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .pic-show {
-
+  margin-top: 20px;
     img {
-      padding: 5px;
-      height: 300px;
-      display: inline-block;
+      height: 180px;
+      width: 310px;
     }
 }
 
 .pic-delete {
   position: absolute;
-  margin-top: -280px;
+  margin-top: -175px;
   margin-left: 15px;
 }
