--- a/app/views/clips/_form.html.erb
+++ b/app/views/clips/_form.html.erb
@@ -3,7 +3,7 @@
      <%= f.label :caption, class: 'sr-only' %>
      <%= f.text_field :caption, class: 'form-control', placeholder: "Add A Caption" %>
    </div>
-   <div class="form-group">
+   <div class="form-all form-group">
      <%= f.label :video %>
      <%= f.file_field :video%>
    </div>
