--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1 class="title-all">Chat</h1>
+  <p>Back to <%= link_to "Messages", conversations_path %></p>
 <% if @over_ten %>
  <%= link_to 'Show Previous', '?m=all' %>
 <% end %>
