--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -3,7 +3,7 @@
    <p> No Images Posted<p>
   <% else %>
     <% @wiki.pics.each do |pic| %>
-      <div class="row col-md-4">
+      <div class="col-sm-3">
         <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set", title: pic.caption }%>
         <div class="pic-delete">
           <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger' %>
