--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -74,3 +74,15 @@
   background-color: white;
   margin-right: 150px;
 }
+
+.cat-count {
+  position: absolute;
+  font-size: 26px;
+  margin-top: -372px;
+  margin-left: 380px;
+  width: 100px;
+
+    p:nth-child(7){
+      margin-bottom:-100px;
+    }
+}
