--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
      <% end %>
    </ul>
  </div>
+ <%= render 'layouts/navbar' %>
 
     <% if flash[:notice] %>
       <div class="alert-wrapper">
