--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,8 +10,7 @@
       <img src="https://healthintelasia.com/wp-content/uploads/2013/09/asia-1500-X-600-banner.jpg">
       <div class="carousel-caption">
        <h1 class="top">Welcome to Travelog</h1>
-       <%= link_to "Join", new_user_registration_path, class: 'btn btn-primary'  %>
-       <%= link_to "Log In", new_user_session_path, class: 'btn btn-default' %>
+       <%= link_to "See How It Works", "#{welcome_index_path}#how-it-works" %>
      </div>
    </div>
 
@@ -57,7 +56,7 @@
     <%= link_to "Discover", wikis_path, class: 'btn btn-primary'  %>
     <img src="https://images.trvl-media.com/media/content/expus/graphics/launch/home/tvly/150324_flights-hero-image_1330x742.jpg">
   </div>
-  <div class="how-info">
+  <div class="how-info" id="how-it-works">
     <h1 class="how-title">How It Works</h1>
       <div class="border-style"></div>
     <div class="info-row">
