--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ body {
   background-color: white;
   font-size: 16px;
   font-weight: 500;
-  border-bottom: 3px solid rgba(1, 1, 1, .2);
+  box-shadow: 0 0 5px;
 
   a {
   color: rgba(1,1,1,.5);
