--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,6 +12,7 @@
   padding-bottom: 10px;
   display: -webkit-box;
   border: 1px solid rgba(1, 0, 1, .1);
+  box-shadow: 0 0 2px;
 }
 
 .profile-image {
@@ -67,7 +68,7 @@
   margin-top: 15px;
   border: 1px solid rgba(1,1,1,.1);
   padding: 10px;
-  background-color: rgba(1,1,1,.2);
+  background-color: rgba(1,1,1,.1);
 
     p:nth-child(1) {
       font-size: 26px;
@@ -81,7 +82,7 @@
 }
 
 .user-posts-slick {
-    background-color: rgba(1,1,1,.2);
+    background-color: rgba(1,1,1,.1);
     text-align: center;
     padding: 20px;
     max-height: 320px;
