--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -161,6 +161,7 @@
   background-color: white;
   margin-top: 10px;
   padding: 10px;
+  box-shadow: 2px 2px 2px rgba(1,1,1, .4);
 
     h3 {
       font-weight: 200;
