--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container message-box">
   <h1 class="title-all">Chat</h1>
   <p>Back to <%= link_to "Messages", conversations_path %></p>
 <% if @over_ten %>
