--- a/app/assets/stylesheets/pics.scss
+++ b/app/assets/stylesheets/pics.scss
@@ -4,13 +4,14 @@
 .pic-show {
   margin-top: 20px;
     img {
-      height: 180px;
-      width: 310px;
+      height: 200px;
+      width: 330px;
+      margin: 5px;
     }
 }
 
 .pic-delete {
   position: absolute;
-  margin-top: -175px;
+  margin-top: -197px;
   margin-left: 15px;
 }
