--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -24,7 +24,7 @@
   margin-top: 10px;
 }
 
-.item {
+.msg-item {
   padding: 5px;
   background-color: white;
   width: 75%;
@@ -57,4 +57,5 @@
 
 .message-box {
   background-color: rgba(1,1,1,.1);
+  padding-bottom: 10px;
 }
