--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -17,7 +17,7 @@
   margin-left: 29px;
   margin-top: 10px;
   margin-bottom: 20px;
-  border: 1px solid rgba(1, 0, 1, .1);
+  box-shadow: 1px 1px 5px rgba(1,1,1,.3);
 }
 
 .wiki-style img {
