--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -8,6 +8,7 @@
         <div class="pic-delete">
           <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger' %>
         </div>
+          <%= pic.caption %>
       </div>
     <% end %>
   <% end %>
