--- a/app/views/clips/show.html.erb
+++ b/app/views/clips/show.html.erb
@@ -3,8 +3,8 @@
    <p> No Videos Posted<p>
   <% else %>
     <% @wiki.clips.each do |clip| %>
-      <div>
-        <%= video_tag clip.video.url(:medium), controls: true, style: "max-width: 100%;" %>
+      <div class="video-index">
+        <%= video_tag clip.video.url(:medium), controls: true, type: "video/mp4", style: "max-width: 100%;" %>
       </div>
     <% end %>
   <% end %>
