--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -6,7 +6,7 @@
       <div class="col-sm-3">
         <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set", title: pic.caption }%>
         <div class="pic-delete">
-          <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger' %>
+          <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this image?'} %>
         </div>
           <%= pic.caption %>
       </div>
