--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -181,7 +181,41 @@
 .user-action {
   width: 200px;
   float: right;
+
+  button {
+    padding: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    border-style: none;
+    background-color: white;
+    border: 2px solid rgba(1,1,1,.2);
+    text-decoration: none;
+    }
+
+    button:nth-child(2) {
+      color: rgb(230, 32, 32);
+      border: 2px solid rgb(230, 32, 32);
+    }
+
+    a {
+      color: rgba(1,1,1,.5);
+      font-weight: 500;
+        &:hover {
+          text-decoration: none;
+          color: rgba(1,1,1,.5);
+        }
+    }
+
+    a:nth-child(2) {
+      color: rgb(230, 32, 32);
+      font-weight: 500;
+        &:hover {
+          text-decoration: none;
+          color: rgba(1,1,1,.5);
+        }
+    }
 }
+
 
 .side-images {
   position: absolute;
