--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,6 +6,6 @@
   <a><%= link_to "Likes", likes_path(@wikis) %></a>
   <a><%= link_to "Followed", followed_users_path(@wikis) %></a>
   <% end %>
-  <a><%= link_to "Categories", categories_path %></a>
+  <a><%= link_to "Regions", categories_path %></a>
 </ul>
 </nav>
