--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,15 +1,7 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.carousel-caption, .cap {
-  padding-bottom: 200px;
-  font-size: 26px;
-}
 
- h1, .top {
-  font-size: 60px;
-  margin-bottom: 220px;
-}
 
 .welcome-slick {
   background-color: rgba(254, 254, 254, 0.5);
@@ -164,7 +156,7 @@
 .info-group {
   margin-left: 140px;
   max-width: 250px;
-  border: 5px solid rgba(255,255,255,.2);
+  box-shadow: 0 0 10px rgba(255,255,255,.8);
   margin-top: 10px;
   padding-left: 30px;
   padding-right: 30px;
@@ -201,4 +193,58 @@
   font-weight: 100;
   font-size: 16px;
   letter-spacing: 1px;
+}
+
+.cap-one {
+  margin-bottom: 360px;
+  padding-right: 470px;
+  width: 1000px;
+  text-shadow: none;
+
+    h1 {
+      color: rgba(1,1,1,.6);
+      font-size: 52px;
+    }
+
+    p {
+      color: rgba(1,1,1,.5);
+      font-size: 20px;
+      float: left;
+      padding-left: 14px;
+    }
+}
+
+.cap-two {
+  margin-bottom: 300px;
+  padding-left: 430px;
+  width: 1400px;
+  text-shadow: none;
+
+    h1 {
+      font-size: 52px;
+      padding-right: 440px;
+    }
+
+    p {
+      font-size: 20px;
+      float: left;
+      padding-left: 20px;
+    }
+}
+
+.cap-three {
+  margin-bottom: 250px;
+  width: 1400px;
+  text-shadow: none;
+
+    h1 {
+      font-size: 52px;
+      margin-right: 970px;
+    }
+
+    p {
+      font-size: 20px;
+      float: left;
+
+    }
 }
