--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,5 +1,4 @@
-<h1 class="title-all container"> Edit Wiki </h1>
+<h1 class="title-all container"> Edit Log </h1>
   <div class="row col-md-8">
     <%= render partial: 'wikis/form' %>
-    
   </div>
